# change-case

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  title_case.rs
